--- a/Style.css
+++ b/Style.css
@@ -171,11 +171,23 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   width: 250px; 
   height: 250px; 
 }
+/*animacion basica sprite al mostrar la informacion del pokemon*/
+.sprite-animacion {
+  animation: moveUpDown 2.5s infinite alternate; 
+}
 
+@keyframes moveUpDown {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(10px); 
+  }
+}
 .details-card {
   background-color: #fff;
   padding: 20px;
