--- a/Style.css
+++ b/Style.css
@@ -192,6 +192,7 @@ body {
   background-color: #fff;
   padding: 20px;
   border-radius: 10px;
+  border: 2px solid #000;
   box-shadow: 0 25px 60px rgba(0, 0, 0, 0.2);
   max-width: 80%;
   max-height: 80%;
@@ -238,8 +239,29 @@ body {
     display: none;
     padding: 20px;
     border-top: 1px solid #ccc;
+    height: 300px;
   }
   
   .show-section {
     display: block;
   }
+
+  .stat-bar {
+    width: 100%;
+    height: 12px;
+    background-color: #ffffff;
+    border-radius: 5px;
+    position: relative;
+  }
+  /* Color con el que sellenara la barra  */
+  .stat-fill {
+    height: 100%;
+    border-radius: 5px;
+    background-color: #001dc2; 
+  }
+  /* Coinvertir en mayuscula los nombres de los stats  */
+  .stat-name {
+    text-transform: uppercase;
+  }
+  
+  
