--- a/Style.css
+++ b/Style.css
@@ -277,10 +277,55 @@ body {
   .estadisticas-info h3,
   .habilidades-info h3,
   .movimientos-info h3 {
+    margin-left: 25px;
     text-transform: uppercase;
     text-align: center;
     font-size: 24px;
     margin-bottom: 15px;
+}
+
+.habilidades-list {
+  text-transform: uppercase;
+  color: #ffffff;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-top: 10px;
+  justify-content: center;
+  margin-left: 25px;
+}
+
+.habilidades {
+  display: inline-block;
+  padding: 5px 10px;
+  background-color: #0008ff;
+  border-radius: 5px;
+  font-size: 14px;
+}
+.mov-list {
+  text-transform: uppercase;
+  color: #ffffff;
+  display: block;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 50px;
+  margin-left: 25px;
+}
+
+.mov-row {
+  display: flex;
+  justify-content: space-between;
+  width: 100%; 
+  margin-bottom: 10px;
+}
+
+.mov {
+  background-color: #0008ff;
+  padding: 5px 10px;
+  border-radius: 7px;
+  width: 48%; 
+  text-align: center;
+  font-size: 14px;
 }
   .show-section {
     display: block;
